# Robotics

mod01/ex01/: commands.txt
mod02/ex01/: .bashrc
mod02/ex02/: list_exec_action_tutorials.txt  package_path_ros2topic.txt
mod02/ex03/: CMakeLists.txt  package.xml
mod02/ex03/MamedovAR/: CMakeLists.txt  package.xml
mod02/ex03/MamedovAR/src/: my_node.cpp
mod02/ex03/install/: local_setup.sh  setup.sh
mod02/ex03/install/ex03/share/ex03/: package.bash  package.zsh
mod02/ex03/log/: latest_build
mod02/ex04/: .bash_history  colcon_build.txt
mod02/ex05/: rosnode_info.txt  rosnode_list.txt
mod02/ex06/: cmd_vel.txt
mod02/ex07/: parameter_server.txt  rosservice_list.txt
mod02/ex08/: rqt_console.txt  three_turtles.launch
mod02/ex09/: CMakeLists.txt  package.xml
mod02/ex09/full_name_message/log/: latest_edit
mod02/ex09/srv/: FullNameSumService.srv
mod02/ex10/: CMakeLists.txt  package.xml
mod02/ex10/src/: publisher_member_function.cpp  subscriber_member_function.cpp
mod03/ex01/service_full_name/: CMakeLists.txt  package.xml
mod03/ex01/service_full_name/src/: client_name.cpp  service_name.cpp
mod03/ex02/action_turtle_commands/: CMakeLists.txt  package.xml
mod03/ex02/action_turtle_commands/action/: MessageTurtleCommands.action
mod03/ex02/action_turtle_commands/include/action_turtle_commands/: visibility_control.h
mod03/ex02/action_turtle_commands/src/: action_turtle_client.cpp  action_turtle_server.cpp
mod03/ex02/action_turtle_commands1/: CMakeLists.txt  package.xml
mod03/ex03/: pose_speed_x1.yaml  pose_speed_x2.yaml
mod03/ex03/turtle_cmd_vel/: metadata.yaml  turtle_cmd_vel_0.db3  turtle_cmd_vel_0.mcap
mod03/ex04/: doctor.txt
mod03/ex05/move_to_goal/: CMakeLists.txt  package.xml
mod03/ex05/move_to_goal/src/: move_to_goal.cpp
mod04/ex01/: last_transform.txt  transform.txt
mod04/ex02/: carrot.rviz
mod04/ex02/actual_turtle_launcher/: CMakeLists.txt  package.xml
mod04/ex02/actual_turtle_launcher/launch/: turtle_tf2_demo.launch.py  turtle_tf2_dynamic_frame_demo.launch.py
mod04/ex02/actual_turtle_launcher/src/: dynamic_frame_tf2_broadcaster.cpp
mod04/ex03/time_travel/: CMakeLists.txt  package.xml
mod04/ex03/time_travel/launch/: turtle_tf2_fixed_frame_demo.launch.py
mod04/ex03/time_travel/src/: fixed_frame_tf2_broadcaster.cpp
mod05/ex01/sam_bot_description/: package.xml
mod05/ex01/sam_bot_description/src/description/: sam_bot_description.urdf
mod05/ex02/: display.launch.py
mod05/ex03/: display.launch.py  sam_bot_description.urdf
mod05/ex03/notsam/: CMakeLists.txt  package.xml
mod05/ex03/notsam/rviz/: robot_bridge.yaml
mod05/ex03/notsam/src/description/: notsam.cpp
mod05/ex03/robot_bringup/launch/: diff_drive.launch.py
mod05/ex04/circle/: CMakeLists.txt  package.xml
mod05/ex04/circle/src/: circle.cpp
mod05/ex05/unique_drive/: CMakeLists.txt  package.xml
mod05/ex05/unique_drive/src/: unique.cpp
mod05/ex05/unique_launcher/: CMakeLists.txt  package.xml
mod05/ex05/unique_launcher/config/: diff_drive.rviz
mod05/ex05/unique_launcher/launch/: diff_drive.launch.py
mod05/ex05/unique_robot/: CMakeLists.txt  package.xml
mod05/ex05/unique_robot/urdf/: monkey.stl  robot.urdf.xacro  start.urdf  vasa.stl
mod06/ex01/: diff_drive.launch.py
mod06/ex03/: diff_drive.launch.py
mod06/ex04/robot_and_lidar/: CMakeLists.txt  package.xml
mod06/ex04/robot_and_lidar/launch/: diff_drive.launch.py
mod06/ex04/robot_and_lidar/src/: robot_and_lidar.cpp
mod06/ex04/robot_description_sensor/: CMakeLists.txt  package.xml
mod06/ex04/robot_description_sensor/urdf/: depth.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro  robot.urdf  robot.urdf.xacro
mod06/ex05/robot_and_camera/: CMakeLists.txt  package.xml
mod06/ex05/robot_and_camera/config/: robot_bridge.yaml
mod06/ex05/robot_and_camera/launch/: diff_drive.launch.py
mod06/ex05/robot_and_camera/src/: robot_and_lidar.cpp
