<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>service_full_name</name>
  <version>0.0.0</version>
  <description>Laboratory work.</description>
  <maintainer email="a.mamedov1@g.nsu.ru">mar</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_runtime_cpp</build_depend>
  <exec_depend>rosidl_default_runtime_cpp</exec_depend>
  <build_depend>rosidl_generator_cpp</build_depend>
  <exec_depend>rosidl_generator_cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
